crates/plotnik-tests/tests/03-analyze/definitions/error_captured_void_ref.txt
Void = {
  (a)
  (b)
}

Q = (call (Void) @v)
------------------ DIAGNOSTICS -------------------
error: the referenced definition produces no value; add a capture inside it or capture a node pattern directly
 --> query.ptk:6:11
  |
1 |   Void = {
  |  ________-
2 | |   (a)
3 | |   (b)
4 | | }
  | |_- defined here
5 |
6 |   Q = (call (Void) @v)
  |             ^^^^^^
-------------------- SYMBOLS ---------------------
Void
Q
  Void
